# LinBot

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  run.ps1  使用说明.txt  第一次使用请运行这个.bat
Linbot/: run_with_reload.py
Linbot/main/: _event_logger.py  chat.py  context.py  event.py  message_method.py  message_type.py  onebot_protocol.py  plugins_manager.py  registry.py  response_handler.py  wsclient.py
linbot/: _event_logger.py  chat.py  event.py  logger.py  message_method.py  message_type.py  run_with_reload.py  wsclient.py
