
[project]
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "frozenlist==1.8.0",
    "idna==3.11",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "watchdog==6.0.0",
    "yarl==1.22.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
